Fixed layout to work on mobile devices.

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -23,6 +23,10 @@
   color: #61dafb;
 }
 
+.app-div {
+  min-height: 100vh;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
